--- a/app/src/main.scss
+++ b/app/src/main.scss
@@ -1,16 +1,14 @@
 @import '~normalize-scss/sass/normalize/import-now';
 
+html,
 body {
-  height: 100vh;
-  width: 100vw;
+  position: fixed;
+  overflow: hidden;
+}
 
+body {
   display: flex;
 
   align-items: center;
   justify-content: center;
-}
-
-
-#canvas {
-  border: 1px solid black;
 }
